...
                            }
                            .sheet(isPresented: $isAddPresented) {
                                AddNoteView( isAddPresented: $isAddPresented)
                            }
                            Spacer()
                            VStack {
                                Text("To-Do list").font(.title).fontWeight(.bold).foregroundColor(.black)
                            }
                            Spacer()
                            
                            EditButton().font(.title).fontWeight(.thin).foregroundColor(.black)
                        }
                        
...
