...
        }
    }
    
    var title: String {
        switch self {
        case .all:
            return "ALL"
        case .wait:
            return "wait"
        case .end:
            return "End"
//        case .late:
//            return "Late"
...
